Fix score alignement

--- a/src/components/anime/AnimeCardView.module.css
+++ b/src/components/anime/AnimeCardView.module.css
@@ -170,6 +170,7 @@
     padding: 0.2rem 0.6rem;
     border-radius: 6px;
     color: white;
+    margin-left: auto;
 }
 
 .score10 {
